fix: editor can't scroll when overflow

--- a/src/components/Right/TabList/tabList.scss
+++ b/src/components/Right/TabList/tabList.scss
@@ -7,6 +7,7 @@
         flex-direction: column;
         justify-content: center;
     }
+
     // padding-left: 10px;
     .ant-tabs {
         height: 100%;
@@ -30,18 +31,31 @@
         .ant-tabs-nav-more {
             display: none;
         }
+
         .ant-tabs-content {
             height: 100%;
-            .editor-toolbar {
-                border: none;                
+
+            #simplemde-editor-2-wrapper {
+                height: 100%;
+                .EasyMDEContainer {
+                    overflow: hidden;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+
+                    .editor-toolbar {
+                        border: none;
+                    }
+
+                    .CodeMirror {
+                        flex-grow: 1;
+                        border-left: none;
+                        border-right: none;
+                        border-bottom: none;
+                        font-size: 16px;
+                    }
+                }
             }
-            .CodeMirror {
-                border-left: none;
-                border-right: none;
-                border-bottom: none;
-                font-size: 16px;
-            }
-            
         }
     }
 }
